--- a/frontend/tourism-app/package.json
+++ b/frontend/tourism-app/package.json
@@ -13,11 +13,13 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.8.4",
+    "axios": "^1.9.0",
     "bootstrap": "^5.3.3",
     "framer-motion": "^12.7.4",
     "leaflet": "^1.9.4",
     "leaflet-routing-machine": "^3.2.12",
+    "powerbi-client": "^2.23.1",
+    "powerbi-client-react": "^2.0.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
@@ -27,8 +29,10 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.1",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.3",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
